# tamagotchi-frame

./: .env  Cargo.toml  Dockerfile  fly.toml  mod.rs  prelude.rs  tamagotchi.rs
entity/: Cargo.toml
entity/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240203_045500_create_table_tamagotchi.rs
src/: handlers.rs  lib.rs  main.rs  neynar.rs  types.rs
