[workspace]
members = [".", "entity", "migration"]

[package]
name = "tamagotch-frame"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
axum = "0.7.3"
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
shuttle-shared-db = { version = "0.38.0", features = ["postgres", "sqlx"] }
tokio = "1.28.2"
tracing = "0.1.40"
tower-http = { version = "0.5.1", features = ["fs"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = "0.7.1"
sea-orm = { version = "0.12", features = ["sqlx-mysql"] }
mysql = "*"
dotenv = "*"
sha2 = { version = "0.10.8", features = [] }
reqwest = { version = "0.11.24", features = ["json"] }


